--- a/Source/Demo/Common/HtmlRenderer.Demo.Common.csproj
+++ b/Source/Demo/Common/HtmlRenderer.Demo.Common.csproj
@@ -1,178 +1,169 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2390B71F-9400-47F4-B23A-7F2649C87D35}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TheArtOfDev.HtmlRenderer.Demo.Common</RootNamespace>
-    <AssemblyName>HtmlRendererDemoCommon</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="HtmlSample.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <DependentUpon>Resources.resx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="Resources.cs" />
-    <Compile Include="SamplesLoader.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HtmlSyntaxHighlighter.cs" />
-    <Compile Include="DemoUtils.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="PerfSamples\1.Big table.htm" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources\comment16.gif" />
-    <EmbeddedResource Include="Resources\CustomFont.ttf" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\delete16.gif" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\delete32.gif" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\Event16.png" />
-    <EmbeddedResource Include="Resources\html32.png" />
-    <EmbeddedResource Include="TestSamples\31.ACID 1.htm" />
-    <EmbeddedResource Include="TestSamples\30.Misc.htm" />
-    <EmbeddedResource Include="TestSamples\21.Bullets.htm" />
-    <EmbeddedResource Include="TestSamples\20.Fonts decorations.htm" />
-    <EmbeddedResource Include="TestSamples\19.Many images.htm" />
-    <EmbeddedResource Include="TestSamples\18.Anchors.htm" />
-    <EmbeddedResource Include="TestSamples\17.Languages.htm" />
-    <EmbeddedResource Include="TestSamples\16.Borders.htm" />
-    <EmbeddedResource Include="TestSamples\15.MaxWidth.htm" />
-    <EmbeddedResource Include="TestSamples\14.Iframes.htm" />
-    <EmbeddedResource Include="TestSamples\13.Tables.htm" />
-    <EmbeddedResource Include="TestSamples\12.Text.htm" />
-    <EmbeddedResource Include="TestSamples\11.LineHeight.htm" />
-    <EmbeddedResource Include="TestSamples\10.BlockInInline.htm" />
-    <EmbeddedResource Include="TestSamples\09.Inline.htm" />
-    <EmbeddedResource Include="TestSamples\08.White-space.htm" />
-    <EmbeddedResource Include="TestSamples\07.Background Image.htm" />
-    <EmbeddedResource Include="TestSamples\06.External Image.htm" />
-    <EmbeddedResource Include="TestSamples\05.Images.htm" />
-    <EmbeddedResource Include="TestSamples\04.Blockquotes.htm" />
-    <EmbeddedResource Include="TestSamples\03.Paragraphs.htm" />
-    <EmbeddedResource Include="TestSamples\02.Line break.htm" />
-    <EmbeddedResource Include="TestSamples\01.Header.htm" />
-    <EmbeddedResource Include="Samples\20.About.htm" />
-    <EmbeddedResource Include="Samples\14.HtmlContainer.htm" />
-    <EmbeddedResource Include="Samples\13.HtmlRender.htm" />
-    <EmbeddedResource Include="Samples\12.HtmlToolTip.htm" />
-    <EmbeddedResource Include="Samples\11.HtmlLabel.htm" />
-    <EmbeddedResource Include="Samples\10.HtmlPanel.htm" />
-    <EmbeddedResource Include="Samples\09.Using the library.htm" />
-    <EmbeddedResource Include="Samples\08.Tooltip.htm" />
-    <EmbeddedResource Include="Samples\07.Additional features.htm" />
-    <EmbeddedResource Include="Samples\06.Embeded video.htm" />
-    <EmbeddedResource Include="Samples\05.Images.htm" />
-    <EmbeddedResource Include="Samples\04.Links.htm" />
-    <EmbeddedResource Include="Samples\03.Tables.htm" />
-    <EmbeddedResource Include="Samples\02.Text.htm" />
-    <EmbeddedResource Include="Samples\01.History.htm" />
-    <EmbeddedResource Include="Samples\00.Intro.htm" />
-    <EmbeddedResource Include="Resources\web_pallete.gif" />
-    <EmbeddedResource Include="Resources\property16.gif" />
-    <EmbeddedResource Include="Resources\method16.gif" />
-    <EmbeddedResource Include="Resources\formula32.png" />
-    <EmbeddedResource Include="Resources\font32.png" />
-    <EmbeddedResource Include="Resources\favorites32.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\Tooltip.html" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="TestSamples\22.RTL.htm" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="PerfSamples\2.Lots blocks in inline.htm" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\chrome.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\code.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\form.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\browser.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\image.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\pdf.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\stopwatch.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\HtmlRenderer\HtmlRenderer.csproj">
-      <Project>{FE611685-391F-4E3E-B27E-D3150E51E49B}</Project>
-      <Name>HtmlRenderer</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\image32.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="TestSamples\32.Image in css content.htm" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="TestSamples\33.Fixed position.htm" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="TestSamples\34.Breaking pages 1 - Paragraphs.htm" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="TestSamples\35.Breaking pages 2 - Tables.htm" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<OutputType>Library</OutputType>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<Platforms>AnyCPU</Platforms>
+		<TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
+		<Configurations>Debug;Release</Configurations>
+	</PropertyGroup>
+	<ItemGroup>
+	  <None Remove="PerfSamples\1.Big table.htm" />
+	  <None Remove="PerfSamples\2.Lots blocks in inline.htm" />
+	  <None Remove="Resources\browser.png" />
+	  <None Remove="Resources\chrome.png" />
+	  <None Remove="Resources\code.png" />
+	  <None Remove="Resources\comment16.gif" />
+	  <None Remove="Resources\CustomFont.ttf" />
+	  <None Remove="Resources\delete16.gif" />
+	  <None Remove="Resources\delete32.gif" />
+	  <None Remove="Resources\Event16.png" />
+	  <None Remove="Resources\favorites32.png" />
+	  <None Remove="Resources\font32.png" />
+	  <None Remove="Resources\form.png" />
+	  <None Remove="Resources\formula32.png" />
+	  <None Remove="Resources\html32.png" />
+	  <None Remove="Resources\image.png" />
+	  <None Remove="Resources\image32.png" />
+	  <None Remove="Resources\method16.gif" />
+	  <None Remove="Resources\pdf.png" />
+	  <None Remove="Resources\property16.gif" />
+	  <None Remove="Resources\stopwatch.png" />
+	  <None Remove="Resources\Tooltip.html" />
+	  <None Remove="Resources\web_pallete.gif" />
+	  <None Remove="Samples\00.Intro.htm" />
+	  <None Remove="Samples\01.History.htm" />
+	  <None Remove="Samples\02.Text.htm" />
+	  <None Remove="Samples\03.Tables.htm" />
+	  <None Remove="Samples\04.Links.htm" />
+	  <None Remove="Samples\05.Images.htm" />
+	  <None Remove="Samples\06.Embeded video.htm" />
+	  <None Remove="Samples\07.Additional features.htm" />
+	  <None Remove="Samples\08.Tooltip.htm" />
+	  <None Remove="Samples\09.Using the library.htm" />
+	  <None Remove="Samples\10.HtmlPanel.htm" />
+	  <None Remove="Samples\11.HtmlLabel.htm" />
+	  <None Remove="Samples\12.HtmlToolTip.htm" />
+	  <None Remove="Samples\13.HtmlRender.htm" />
+	  <None Remove="Samples\14.HtmlContainer.htm" />
+	  <None Remove="Samples\20.About.htm" />
+	  <None Remove="TestSamples\01.Header.htm" />
+	  <None Remove="TestSamples\02.Line break.htm" />
+	  <None Remove="TestSamples\03.Paragraphs.htm" />
+	  <None Remove="TestSamples\04.Blockquotes.htm" />
+	  <None Remove="TestSamples\05.Images.htm" />
+	  <None Remove="TestSamples\06.External Image.htm" />
+	  <None Remove="TestSamples\07.Background Image.htm" />
+	  <None Remove="TestSamples\08.White-space.htm" />
+	  <None Remove="TestSamples\09.Inline.htm" />
+	  <None Remove="TestSamples\10.BlockInInline.htm" />
+	  <None Remove="TestSamples\11.LineHeight.htm" />
+	  <None Remove="TestSamples\12.Text.htm" />
+	  <None Remove="TestSamples\13.Tables.htm" />
+	  <None Remove="TestSamples\14.Iframes.htm" />
+	  <None Remove="TestSamples\15.MaxWidth.htm" />
+	  <None Remove="TestSamples\16.Borders.htm" />
+	  <None Remove="TestSamples\17.Languages.htm" />
+	  <None Remove="TestSamples\18.Anchors.htm" />
+	  <None Remove="TestSamples\19.Many images.htm" />
+	  <None Remove="TestSamples\20.Fonts decorations.htm" />
+	  <None Remove="TestSamples\21.Bullets.htm" />
+	  <None Remove="TestSamples\22.RTL.htm" />
+	  <None Remove="TestSamples\30.Misc.htm" />
+	  <None Remove="TestSamples\31.ACID 1.htm" />
+	  <None Remove="TestSamples\32.Image in css content.htm" />
+	  <None Remove="TestSamples\33.Fixed position.htm" />
+	  <None Remove="TestSamples\34.Breaking pages 1 - Paragraphs.htm" />
+	  <None Remove="TestSamples\35.Breaking pages 2 - Tables.htm" />
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Include="PerfSamples\1.Big table.htm" />
+	  <EmbeddedResource Include="PerfSamples\2.Lots blocks in inline.htm" />
+	  <EmbeddedResource Include="Resources\browser.png" />
+	  <EmbeddedResource Include="Resources\chrome.png" />
+	  <EmbeddedResource Include="Resources\code.png" />
+	  <EmbeddedResource Include="Resources\comment16.gif" />
+	  <EmbeddedResource Include="Resources\CustomFont.ttf" />
+	  <EmbeddedResource Include="Resources\delete16.gif" />
+	  <EmbeddedResource Include="Resources\delete32.gif" />
+	  <EmbeddedResource Include="Resources\Event16.png" />
+	  <EmbeddedResource Include="Resources\favorites32.png" />
+	  <EmbeddedResource Include="Resources\font32.png" />
+	  <EmbeddedResource Include="Resources\form.png" />
+	  <EmbeddedResource Include="Resources\formula32.png" />
+	  <EmbeddedResource Include="Resources\html32.png" />
+	  <EmbeddedResource Include="Resources\image.png" />
+	  <EmbeddedResource Include="Resources\image32.png" />
+	  <EmbeddedResource Include="Resources\method16.gif" />
+	  <EmbeddedResource Include="Resources\pdf.png" />
+	  <EmbeddedResource Include="Resources\property16.gif" />
+	  <EmbeddedResource Include="Resources\stopwatch.png" />
+	  <EmbeddedResource Include="Resources\Tooltip.html" />
+	  <EmbeddedResource Include="Resources\web_pallete.gif" />
+	  <EmbeddedResource Include="Samples\00.Intro.htm" />
+	  <EmbeddedResource Include="Samples\01.History.htm" />
+	  <EmbeddedResource Include="Samples\02.Text.htm" />
+	  <EmbeddedResource Include="Samples\03.Tables.htm" />
+	  <EmbeddedResource Include="Samples\04.Links.htm" />
+	  <EmbeddedResource Include="Samples\05.Images.htm" />
+	  <EmbeddedResource Include="Samples\06.Embeded video.htm" />
+	  <EmbeddedResource Include="Samples\07.Additional features.htm" />
+	  <EmbeddedResource Include="Samples\08.Tooltip.htm" />
+	  <EmbeddedResource Include="Samples\09.Using the library.htm" />
+	  <EmbeddedResource Include="Samples\10.HtmlPanel.htm" />
+	  <EmbeddedResource Include="Samples\11.HtmlLabel.htm" />
+	  <EmbeddedResource Include="Samples\12.HtmlToolTip.htm" />
+	  <EmbeddedResource Include="Samples\13.HtmlRender.htm" />
+	  <EmbeddedResource Include="Samples\14.HtmlContainer.htm" />
+	  <EmbeddedResource Include="Samples\20.About.htm" />
+	  <EmbeddedResource Include="TestSamples\01.Header.htm" />
+	  <EmbeddedResource Include="TestSamples\02.Line break.htm" />
+	  <EmbeddedResource Include="TestSamples\03.Paragraphs.htm" />
+	  <EmbeddedResource Include="TestSamples\04.Blockquotes.htm" />
+	  <EmbeddedResource Include="TestSamples\05.Images.htm" />
+	  <EmbeddedResource Include="TestSamples\06.External Image.htm" />
+	  <EmbeddedResource Include="TestSamples\07.Background Image.htm" />
+	  <EmbeddedResource Include="TestSamples\08.White-space.htm" />
+	  <EmbeddedResource Include="TestSamples\09.Inline.htm" />
+	  <EmbeddedResource Include="TestSamples\10.BlockInInline.htm" />
+	  <EmbeddedResource Include="TestSamples\11.LineHeight.htm" />
+	  <EmbeddedResource Include="TestSamples\12.Text.htm" />
+	  <EmbeddedResource Include="TestSamples\13.Tables.htm" />
+	  <EmbeddedResource Include="TestSamples\14.Iframes.htm" />
+	  <EmbeddedResource Include="TestSamples\15.MaxWidth.htm" />
+	  <EmbeddedResource Include="TestSamples\16.Borders.htm" />
+	  <EmbeddedResource Include="TestSamples\17.Languages.htm" />
+	  <EmbeddedResource Include="TestSamples\18.Anchors.htm" />
+	  <EmbeddedResource Include="TestSamples\19.Many images.htm" />
+	  <EmbeddedResource Include="TestSamples\20.Fonts decorations.htm" />
+	  <EmbeddedResource Include="TestSamples\21.Bullets.htm" />
+	  <EmbeddedResource Include="TestSamples\22.RTL.htm" />
+	  <EmbeddedResource Include="TestSamples\30.Misc.htm" />
+	  <EmbeddedResource Include="TestSamples\31.ACID 1.htm" />
+	  <EmbeddedResource Include="TestSamples\32.Image in css content.htm" />
+	  <EmbeddedResource Include="TestSamples\33.Fixed position.htm" />
+	  <EmbeddedResource Include="TestSamples\34.Breaking pages 1 - Paragraphs.htm" />
+	  <EmbeddedResource Include="TestSamples\35.Breaking pages 2 - Tables.htm" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+	  <PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\HtmlRenderer\HtmlRenderer.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>PublicResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	    <CustomToolNamespace>TheArtOfDev.HtmlRenderer.Demo.Common.Properties</CustomToolNamespace>
+	  </EmbeddedResource>
+	</ItemGroup>
 </Project>
