--- a/Source/HtmlRenderer.PdfSharp/HtmlRenderer.PdfSharp.csproj
+++ b/Source/HtmlRenderer.PdfSharp/HtmlRenderer.PdfSharp.csproj
@@ -27,7 +27,8 @@
 		</Compile>
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Include="PDFsharp" Version="6.2.2" />
+	  <PackageReference Include="PDFSharp.Standard" Version="1.51.15" />
+	  <PackageReference Include="PDFSharp.Standard.Charting" Version="1.51.15" />
 	  <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup>
